# python-project-lvl2

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: main-test.yml
gendiff/scripts/: gendiff.py
