[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Cain Entropax Maxwell <cainmax@posteo.mx>"]
license = "MIT"
packages = [
    { include = "gendiff" }
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
